--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
-version: "2"
+version: "3"
 services:
-  app:
-    build:
-      # Build an image from the Dockerfile in the current directory
-      context: .
+  etl:
+    build: .
+    image: infinite-playlists:${IMAGE_TAG}
+    volumes:
+      - ${HOME}/.aws/credentials:/root/.aws/credentials:ro
